--- a/day1.html
+++ b/day1.html
@@ -23,7 +23,7 @@
     <div class="imgcontainer">
         <img class="Dock img" src="382224d82da742f873b55301f632779f.jpg" alt="dockimg">
         <div class="imagetext">
-            
+            <span class="bold">BOLD</span>&<span class="bold">BEAUTIFUL</span>
         </div>
     </div>
 
