--- a/day1.html
+++ b/day1.html
@@ -25,7 +25,18 @@
         <div class="imagetext">
             <span class="bold">BOLD</span>&<span class="bold">BEAUTIFUL</span>
         </div>
-        
+    </div>
+    <div class="horizontal-line">
+        <hr>
+        <div class="centered-text"><span id="what" style="color: #111;"><b>what</b></span> we DO?</div>
+    </div>
+    <div class="elementcontrainer">
+        <div class="Web">
+            <img src="" alt="">
+        </div>
+        <div class="cloud"></div>
+        <div class="social"></div>
+        <div class="smart"></div>
     </div>
 
 
