--- a/day1.html
+++ b/day1.html
@@ -30,14 +30,26 @@
         <hr>
         <div class="centered-text"><span id="what" style="color: #111;"><b>what</b></span> we DO?</div>
     </div>
-    <div class="elementcontrainer">
-        <div class="Web">
-            <img src="" alt="">
+    <div class="container">
+        <div class="container1">
+            <img src="360_F_513953176_bVVACas5T2ZMPdW7Ql6EyngchqvHOVgS.jpg" alt="">
+            <div class="cricle"></div>
         </div>
-        <div class="cloud"></div>
-        <div class="social"></div>
-        <div class="smart"></div>
+        <div class="container2">
+            
+            <img src="187965566-isometric-cube-element-icon-cubist-abstract-3d-shape-stock-vector-illustration-clip-art-graphics.jpg" alt="">
+            <div class="cricle"></div>
+        </div>
+        <div class="container3">
+            <div class="cricle"></div>
+            <img src="desktop-wallpaper-apple-logo-black-black-apple-apple-logo-iphone-apple-iphone-clear-thumbnail.jpg" alt="">
+        </div>
+        <div class="container4">
+            <div class="cricle"></div>
+            <img src="32872a13199e8d3ecfb1bbc8746b434d.jpg" alt="">
+        </div>
     </div>
+    
 
 
 </body>
