--- a/talentship.html
+++ b/talentship.html
@@ -52,12 +52,10 @@
                 <div class="lin3"><p>
                     Sounds too good to be true? It just works.<span style="color:#f27804;"> GUARANTEED.</span>
                 </p>
-                <div class="button">
+                </div>
+                <div class="buttonmiddle">
                     >>> Book expert call !
     
-                </div>
-
-
                 </div>
             </div>
             </div>
