--- a/talentship/talentship.html
+++ b/talentship/talentship.html
@@ -14,13 +14,13 @@
                     Talentship
                 </div>
                 <div class="menu">
-                    <UL class = "menu bar">
-                        <LI><a href="#">Method</a></LI>
-                        <LI><a href="#">Service</a></LI>
-                        <LI><a href="#">Case Studies</a></LI>
-                        <LI><a href="#">Why Us</a></LI>
-                        <LI><a href="#">Careers</a></LI>
-                    </UL>
+                    <ul class = "menu bar">
+                        <li><a href="#">Method</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Case Studies</a></li>
+                        <li><a href="#">Why Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
                 </div>
                 <div class="rightmenu">
                     <div class="button">
